# pastedeploy

./: .coveragerc  .gitignore  .hgignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.rst  contributing.md  pyproject.toml  pytest.ini  regen-docs  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci-tests.yml
docs/: Makefile  conf.py  index.rst  index.txt  news.rst  news.txt  paste-deploy.txt  rebuild
docs/modules/: config.txt  converters.rst  loadwsgi.txt  loadwsgi_ext.rst
paste/: __init__.py
paste/deploy/: __init__.py  compat.py  config.py  converters.py  epdesc.py  interfaces.py  loadwsgi.py  paster_templates.py  pipeline.py  servers.py  tag.py  urlmap.py  util.py
paste/deploy/paster_templates/paste_deploy/+package+/: sampleapp.py_tmpl  wsgiapp.py_tmpl
paste/deploy/paster_templates/paste_deploy/docs/: config.txt  devel_config.ini_tmpl  example_deploy.ini
paste/deploy/util/: fixtypeerror.py
src/paste/: __init__.py
src/paste/deploy/: __init__.py  config.py  converters.py  loadwsgi.py  paster_templates.py  util.py
tests/: __init__.py  conftest.py  finddata.py  fixture.py  test_basic_app.py  test_config.py  test_config_middleware.py  test_converters.py  test_filter.py  test_func_loader.py  test_load_package.py  test_loader_factory.py
tests/fake_packages/DummyJsonLoader/: setup.py
tests/fake_packages/DummyJsonLoader/JsonLoader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/fake_packages/DummyJsonLoader/jsonloader/: __init__.py
tests/fake_packages/FakeApp.egg/: EGG-INFO  setup.py
tests/fake_packages/FakeApp.egg/FakeApp.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
tests/fake_packages/FakeApp.egg/fakeapp/: apps.py  configapps.py
tests/fake_packages/FakeJsonLoader/: setup.py
tests/fake_packages/FakeJsonLoader/FakeJsonLoader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/fake_packages/FakeJsonLoader/fakejsonloader/: __init__.py
tests/sample_configs/: basic_app.ini  basic_app.json  executable.ini  test_config.ini  test_config_included.ini  test_error.ini  test_filter.ini  test_filter_with.ini  test_func.ini
