[metadata]
name = PasteDeploy
version = 3.0.dev0
author = Ian Bicking
author_email = pylons-discuss@googlegroups.com
maintainer = Chris Dent
maintainer_email = pylons-discuss@googlegroups.com
license = MIT
description = Load, configure, and compose WSGI applications and servers
keywords =
    web
    wsgi
    application
    server
url = https://docs.pylonsproject.org/projects/pastedeploy/en/latest/
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Paste
project_urls =
    Documentation = https://docs.pylonsproject.org/projects/pastedeploy/en/latest/
    Changelog = https://docs.pylonsproject.org/projects/pastedeploy/en/latest/news.html
    Issue Tracker = https://github.com/Pylons/pastedeploy/issues

[options]
package_dir =
    =src
packages = find:
zip_safe = False
install_requires =
    importlib-metadata; python_version<"3.8"
include_package_data = True
namespace_packages =
    paste

[options.packages.find]
where = src

[options.extras_require]
config =
paste =
    Paste
docs =
    Sphinx >= 1.7.5
    pylons-sphinx-themes
testing =
    Paste
    pytest
    pytest-cov

[options.entry_points]
paste.filter_app_factory =
    config = paste.deploy.config:make_config_filter [Config]
    prefix = paste.deploy.config:make_prefix_middleware

paste.paster_create_template =
    paste_deploy = paste.deploy.paster_templates:PasteDeploy

[check-manifest]
ignore-bad-ideas =
    tests/fake_packages/**
